@@ -1,6 +1,11 @@
 [11.21] released ...
 * When mail is sent using SMTP, 'Bcc:' fields are not passed to the
   server anymore (Bugreport by Matthew Fischer.)
+* A message that is already marked as answered is not marked again if
+  it is replied to and the 'markanswered' variable is set.
+* Nail no longer generates an error if renaming a message in a maildir
+  folder fails because both the old and the new link have the same name
+  (i.e. if the rename operation was superfluous).
 * The new 'sendcharsets' variable was incorrectly named 'charsets' in
   nail.rc in the last version. If nail 11.20 was the first version of
   nail you ever installed, you should correct this by hand since the
